# wgpupractice

./: Cargo.toml  flake.nix
src/: camera.rs  main.rs  model.rs  renderer.rs  shader.wgsl  texture.rs  user_settings.rs
